src/parser/ValgoParser.cpp

// Generated from Valgo.g4 by ANTLR 4.13.1


#include "ValgoListener.h"
#include "ValgoVisitor.h"

#include "ValgoParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ValgoParserStaticData final {
  ValgoParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ValgoParserStaticData(const ValgoParserStaticData&) = delete;
  ValgoParserStaticData(ValgoParserStaticData&&) = delete;
  ValgoParserStaticData& operator=(const ValgoParserStaticData&) = delete;
  ValgoParserStaticData& operator=(ValgoParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag valgoParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ValgoParserStaticData *valgoParserStaticData = nullptr;

void valgoParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (valgoParserStaticData != nullptr) {
    return;
  }
#else
  assert(valgoParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ValgoParserStaticData>(
    std::vector<std::string>{
      "program", "function", "procedure", "block", "statement", "expression", 
      "binaryExpression", "unaryExpression", "primaryExpression", "type"
    },
    std::vector<std::string>{
      "", "'('", "','", "')'", "'#'", "'$'", "'{'", "'}'", "'return'", "';'", 
      "'print'", "'='", "'if'", "'else if'", "'else'", "'while'", "'or'", 
      "'and'", "'|'", "'~'", "'&'", "'=='", "'!='", "'<'", "'>'", "'<='", 
      "'>='", "'++'", "'+:'", "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", 
      "'%'", "'not'", "'int::'", "'char::'", "'float::'", "'['", "']'", 
      "'int'", "'char'", "'float'", "'..'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "ID", "INT", "FLOAT", 
      "CHAR", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  valgoParserStaticData = staticData.release();
}

}

ValgoParser::ValgoParser(TokenStream *input) : ValgoParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ValgoParser::ValgoParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ValgoParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *valgoParserStaticData->atn, valgoParserStaticData->decisionToDFA, valgoParserStaticData->sharedContextCache, options);
}

ValgoParser::~ValgoParser() {
  delete _interpreter;
}

const atn::ATN& ValgoParser::getATN() const {
  return *valgoParserStaticData->atn;
}

std::string ValgoParser::getGrammarFileName() const {
  return "Valgo.g4";
}

const std::vector<std::string>& ValgoParser::getRuleNames() const {
  return valgoParserStaticData->ruleNames;
}

const dfa::Vocabulary& ValgoParser::getVocabulary() const {
  return valgoParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ValgoParser::getSerializedATN() const {
  return valgoParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ValgoParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ValgoParser::ProgramContext::EOF() {
  return getToken(ValgoParser::EOF, 0);
}

std::vector<ValgoParser::FunctionContext *> ValgoParser::ProgramContext::function() {
  return getRuleContexts<ValgoParser::FunctionContext>();
}

ValgoParser::FunctionContext* ValgoParser::ProgramContext::function(size_t i) {
  return getRuleContext<ValgoParser::FunctionContext>(i);
}

std::vector<ValgoParser::ProcedureContext *> ValgoParser::ProgramContext::procedure() {
  return getRuleContexts<ValgoParser::ProcedureContext>();
}

ValgoParser::ProcedureContext* ValgoParser::ProgramContext::procedure(size_t i) {
  return getRuleContext<ValgoParser::ProcedureContext>(i);
}


size_t ValgoParser::ProgramContext::getRuleIndex() const {
  return ValgoParser::RuleProgram;
}

void ValgoParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ValgoParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any ValgoParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ValgoParser::ProgramContext* ValgoParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ValgoParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(22);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case ValgoParser::T__41:
        case ValgoParser::T__42:
        case ValgoParser::T__43: {
          setState(20);
          function();
          break;
        }

        case ValgoParser::T__3: {
          setState(21);
          procedure();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(24); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 30786325577744) != 0));
    setState(26);
    match(ValgoParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

ValgoParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ValgoParser::BlockContext* ValgoParser::FunctionContext::block() {
  return getRuleContext<ValgoParser::BlockContext>(0);
}

std::vector<ValgoParser::TypeContext *> ValgoParser::FunctionContext::type() {
  return getRuleContexts<ValgoParser::TypeContext>();
}

ValgoParser::TypeContext* ValgoParser::FunctionContext::type(size_t i) {
  return getRuleContext<ValgoParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> ValgoParser::FunctionContext::ID() {
  return getTokens(ValgoParser::ID);
}

tree::TerminalNode* ValgoParser::FunctionContext::ID(size_t i) {
  return getToken(ValgoParser::ID, i);
}


size_t ValgoParser::FunctionContext::getRuleIndex() const {
  return ValgoParser::RuleFunction;
}

void ValgoParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void ValgoParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}


std::any ValgoParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

ValgoParser::FunctionContext* ValgoParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 2, ValgoParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    antlrcpp::downCast<FunctionContext *>(_localctx)->returnType = type(0);
    setState(29);
    antlrcpp::downCast<FunctionContext *>(_localctx)->name = match(ValgoParser::ID);
    setState(30);
    match(ValgoParser::T__0);
    setState(42);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 30786325577728) != 0)) {
      setState(31);
      antlrcpp::downCast<FunctionContext *>(_localctx)->typeContext = type(0);
      antlrcpp::downCast<FunctionContext *>(_localctx)->paramTypes.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->typeContext);
      setState(32);
      antlrcpp::downCast<FunctionContext *>(_localctx)->idToken = match(ValgoParser::ID);
      antlrcpp::downCast<FunctionContext *>(_localctx)->paramNames.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->idToken);
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ValgoParser::T__1) {
        setState(33);
        match(ValgoParser::T__1);
        setState(34);
        antlrcpp::downCast<FunctionContext *>(_localctx)->typeContext = type(0);
        antlrcpp::downCast<FunctionContext *>(_localctx)->paramTypes.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->typeContext);
        setState(35);
        antlrcpp::downCast<FunctionContext *>(_localctx)->idToken = match(ValgoParser::ID);
        antlrcpp::downCast<FunctionContext *>(_localctx)->paramNames.push_back(antlrcpp::downCast<FunctionContext *>(_localctx)->idToken);
        setState(41);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(44);
    match(ValgoParser::T__2);
    setState(45);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcedureContext ------------------------------------------------------------------

ValgoParser::ProcedureContext::ProcedureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ValgoParser::BlockContext* ValgoParser::ProcedureContext::block() {
  return getRuleContext<ValgoParser::BlockContext>(0);
}

std::vector<tree::TerminalNode *> ValgoParser::ProcedureContext::ID() {
  return getTokens(ValgoParser::ID);
}

tree::TerminalNode* ValgoParser::ProcedureContext::ID(size_t i) {
  return getToken(ValgoParser::ID, i);
}

std::vector<ValgoParser::TypeContext *> ValgoParser::ProcedureContext::type() {
  return getRuleContexts<ValgoParser::TypeContext>();
}

ValgoParser::TypeContext* ValgoParser::ProcedureContext::type(size_t i) {
  return getRuleContext<ValgoParser::TypeContext>(i);
}


size_t ValgoParser::ProcedureContext::getRuleIndex() const {
  return ValgoParser::RuleProcedure;
}

void ValgoParser::ProcedureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProcedure(this);
}

void ValgoParser::ProcedureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProcedure(this);
}


std::any ValgoParser::ProcedureContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitProcedure(this);
  else
    return visitor->visitChildren(this);
}

ValgoParser::ProcedureContext* ValgoParser::procedure() {
  ProcedureContext *_localctx = _tracker.createInstance<ProcedureContext>(_ctx, getState());
  enterRule(_localctx, 4, ValgoParser::RuleProcedure);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(ValgoParser::T__3);
    setState(48);
    antlrcpp::downCast<ProcedureContext *>(_localctx)->name = match(ValgoParser::ID);
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ValgoParser::T__4) {
      setState(49);
      match(ValgoParser::T__4);
      setState(50);
      antlrcpp::downCast<ProcedureContext *>(_localctx)->typeContext = type(0);
      antlrcpp::downCast<ProcedureContext *>(_localctx)->paramTypes.push_back(antlrcpp::downCast<ProcedureContext *>(_localctx)->typeContext);
      setState(51);
      antlrcpp::downCast<ProcedureContext *>(_localctx)->idToken = match(ValgoParser::ID);
      antlrcpp::downCast<ProcedureContext *>(_localctx)->paramNames.push_back(antlrcpp::downCast<ProcedureContext *>(_localctx)->idToken);
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ValgoParser::T__1) {
        setState(52);
        match(ValgoParser::T__1);
        setState(53);
        match(ValgoParser::T__4);
        setState(54);
        antlrcpp::downCast<ProcedureContext *>(_localctx)->typeContext = type(0);
        antlrcpp::downCast<ProcedureContext *>(_localctx)->paramTypes.push_back(antlrcpp::downCast<ProcedureContext *>(_localctx)->typeContext);
        setState(55);
        antlrcpp::downCast<ProcedureContext *>(_localctx)->idToken = match(ValgoParser::ID);
        antlrcpp::downCast<ProcedureContext *>(_localctx)->paramNames.push_back(antlrcpp::downCast<ProcedureContext *>(_localctx)->idToken);
        setState(61);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(64);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ValgoParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ValgoParser::StatementContext *> ValgoParser::BlockContext::statement() {
  return getRuleContexts<ValgoParser::StatementContext>();
}

ValgoParser::StatementContext* ValgoParser::BlockContext::statement(size_t i) {
  return getRuleContext<ValgoParser::StatementContext>(i);
}


size_t ValgoParser::BlockContext::getRuleIndex() const {
  return ValgoParser::RuleBlock;
}

void ValgoParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void ValgoParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any ValgoParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ValgoParser::BlockContext* ValgoParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, ValgoParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(ValgoParser::T__5);
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 101155069793600) != 0)) {
      setState(67);
      statement();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(73);
    match(ValgoParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

ValgoParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ValgoParser::StatementContext::getRuleIndex() const {
  return ValgoParser::RuleStatement;
}

void ValgoParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- WhileStatementContext ------------------------------------------------------------------

ValgoParser::ExpressionContext* ValgoParser::WhileStatementContext::expression() {
  return getRuleContext<ValgoParser::ExpressionContext>(0);
}

ValgoParser::BlockContext* ValgoParser::WhileStatementContext::block() {
  return getRuleContext<ValgoParser::BlockContext>(0);
}

ValgoParser::WhileStatementContext::WhileStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::WhileStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStatement(this);
}
void ValgoParser::WhileStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStatement(this);
}

std::any ValgoParser::WhileStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitWhileStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintStatementContext ------------------------------------------------------------------

std::vector<ValgoParser::ExpressionContext *> ValgoParser::PrintStatementContext::expression() {
  return getRuleContexts<ValgoParser::ExpressionContext>();
}

ValgoParser::ExpressionContext* ValgoParser::PrintStatementContext::expression(size_t i) {
  return getRuleContext<ValgoParser::ExpressionContext>(i);
}

ValgoParser::PrintStatementContext::PrintStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::PrintStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStatement(this);
}
void ValgoParser::PrintStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStatement(this);
}

std::any ValgoParser::PrintStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitPrintStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BlockStatementContext ------------------------------------------------------------------

ValgoParser::BlockContext* ValgoParser::BlockStatementContext::block() {
  return getRuleContext<ValgoParser::BlockContext>(0);
}

ValgoParser::BlockStatementContext::BlockStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::BlockStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockStatement(this);
}
void ValgoParser::BlockStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockStatement(this);
}

std::any ValgoParser::BlockStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitBlockStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignmentStatementContext ------------------------------------------------------------------

tree::TerminalNode* ValgoParser::AssignmentStatementContext::ID() {
  return getToken(ValgoParser::ID, 0);
}

ValgoParser::ExpressionContext* ValgoParser::AssignmentStatementContext::expression() {
  return getRuleContext<ValgoParser::ExpressionContext>(0);
}

ValgoParser::AssignmentStatementContext::AssignmentStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::AssignmentStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentStatement(this);
}
void ValgoParser::AssignmentStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentStatement(this);
}

std::any ValgoParser::AssignmentStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitAssignmentStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CallStatementContext ------------------------------------------------------------------

tree::TerminalNode* ValgoParser::CallStatementContext::ID() {
  return getToken(ValgoParser::ID, 0);
}

std::vector<ValgoParser::ExpressionContext *> ValgoParser::CallStatementContext::expression() {
  return getRuleContexts<ValgoParser::ExpressionContext>();
}

ValgoParser::ExpressionContext* ValgoParser::CallStatementContext::expression(size_t i) {
  return getRuleContext<ValgoParser::ExpressionContext>(i);
}

ValgoParser::CallStatementContext::CallStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::CallStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCallStatement(this);
}
void ValgoParser::CallStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCallStatement(this);
}

std::any ValgoParser::CallStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitCallStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatementContext ------------------------------------------------------------------

ValgoParser::ExpressionContext* ValgoParser::ReturnStatementContext::expression() {
  return getRuleContext<ValgoParser::ExpressionContext>(0);
}

ValgoParser::ReturnStatementContext::ReturnStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::ReturnStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStatement(this);
}
void ValgoParser::ReturnStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStatement(this);
}

std::any ValgoParser::ReturnStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitReturnStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- IfStatementContext ------------------------------------------------------------------

std::vector<ValgoParser::ExpressionContext *> ValgoParser::IfStatementContext::expression() {
  return getRuleContexts<ValgoParser::ExpressionContext>();
}

ValgoParser::ExpressionContext* ValgoParser::IfStatementContext::expression(size_t i) {
  return getRuleContext<ValgoParser::ExpressionContext>(i);
}

std::vector<ValgoParser::BlockContext *> ValgoParser::IfStatementContext::block() {
  return getRuleContexts<ValgoParser::BlockContext>();
}

ValgoParser::BlockContext* ValgoParser::IfStatementContext::block(size_t i) {
  return getRuleContext<ValgoParser::BlockContext>(i);
}

ValgoParser::IfStatementContext::IfStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}
void ValgoParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

std::any ValgoParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VarDeclarationStatementContext ------------------------------------------------------------------

ValgoParser::TypeContext* ValgoParser::VarDeclarationStatementContext::type() {
  return getRuleContext<ValgoParser::TypeContext>(0);
}

tree::TerminalNode* ValgoParser::VarDeclarationStatementContext::ID() {
  return getToken(ValgoParser::ID, 0);
}

ValgoParser::ExpressionContext* ValgoParser::VarDeclarationStatementContext::expression() {
  return getRuleContext<ValgoParser::ExpressionContext>(0);
}

ValgoParser::VarDeclarationStatementContext::VarDeclarationStatementContext(StatementContext *ctx) { copyFrom(ctx); }

void ValgoParser::VarDeclarationStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclarationStatement(this);
}
void ValgoParser::VarDeclarationStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ValgoListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclarationStatement(this);
}

std::any ValgoParser::VarDeclarationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ValgoVisitor*>(visitor))
    return parserVisitor->visitVarDeclarationStatement(this);
  else
    return visitor->visitChildren(this);
}
ValgoParser::StatementContext* ValgoParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 8, ValgoParser::RuleStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(137);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ValgoParser::ReturnStatementContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(75);
      match(ValgoParser::T__7);
      setState(77);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 1057667909419010) != 0)) {
        setState(76);
        expression();
      }
      setState(79);
      match(ValgoParser::T__8);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<ValgoParser::PrintStatementContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(80);
      match(ValgoParser::T__9);
      setState(81);
      expression();
      setState(86);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == ValgoParser::T__1) {
        setState(82);
        match(ValgoParser::T__1);
        setState(83);
        expression();
        setState(88);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(89);
      match(ValgoParser::T__8);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<ValgoParser::VarDeclarationStatementContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(91);
      type(0);
      setState(92);
      match(ValgoParser::ID);
      setState(93);
      match(ValgoParser::T__10);
      setState(94);
      expression();
      setState(95);
      match(ValgoParser::T__8);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<ValgoParser::AssignmentStatementContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(97);
      match(ValgoParser::ID);
      setState(98);
      match(ValgoParser::T__10);
      setState(99);
      expression();
      setState(100);
      match(ValgoParser::T__8);
      break;
    }
